@@ -5,6 +5,8 @@ import com.freshmart.dto.InventoryResponse;
 import com.freshmart.dto.ProductInventoryResponse;
 import com.freshmart.event.InventoryAdjustedEvent;
 import com.freshmart.exception.InventoryNotFoundException;
+import com.freshmart.exception.ProductNotFoundException;
+import com.freshmart.exception.StoreNotFoundException;
 import com.freshmart.mapper.InventoryMapper;
 import com.freshmart.mapper.ProductInventoryMapper;
 import com.freshmart.model.Inventory;
@@ -12,6 +14,7 @@ import com.freshmart.model.Product;
 import com.freshmart.model.Store;
 import com.freshmart.model.Transaction.TransactionType;
 import com.freshmart.repository.InventoryRepository;
+import com.freshmart.repository.ProductRepository;
 import com.freshmart.repository.StoreRepository;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
@@ -19,47 +22,57 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class InventoryService {
+
+    private static final String PRODUCT_ALREADY_IN_STORE = "Product already exists in this store's inventory";
+    private static final String POSITIVE_QTY_REQUIRED = "Quantity must be greater than zero";
+    private static final String NON_ZERO_ADJUSTMENT_REQUIRED = "Quantity change must not be zero";
+    private static final String QTY_REQUIRED = "Quantity is required";
+    private static final String QTY_CHANGE_REQUIRED = "Quantity change is required";
     
     private final InventoryRepository inventoryRepository;
     private final StoreRepository storeRepository;
-    private final ProductService productService;
+    private final ProductRepository productRepository;
     private final CurrentUserService currentUserService;
     private final InventoryMapper inventoryMapper;
     private final ProductInventoryMapper productInventoryMapper;
     private final PricingService pricingService;
+    private final PercentOffStrategy percentOffStrategy;
+    private final FlatPriceStrategy flatPriceStrategy;
     private final ApplicationEventPublisher eventPublisher;
-    
+
     public InventoryService(InventoryRepository inventoryRepository,
-                   StoreRepository storeRepository,
-                   ProductService productService,
-                    CurrentUserService currentUserService,
-                    InventoryMapper inventoryMapper,
-                    ProductInventoryMapper productInventoryMapper,
-                    PricingService pricingService,
-                    ApplicationEventPublisher eventPublisher) {
+                            StoreRepository storeRepository,
+                            ProductRepository productRepository,
+                            CurrentUserService currentUserService,
+                            InventoryMapper inventoryMapper,
+                            ProductInventoryMapper productInventoryMapper,
+                            PricingService pricingService,
+                            PercentOffStrategy percentOffStrategy,
+                            FlatPriceStrategy flatPriceStrategy,
+                            ApplicationEventPublisher eventPublisher) {
         this.inventoryRepository = inventoryRepository;
         this.storeRepository = storeRepository;
-        this.productService = productService;
+        this.productRepository = productRepository;
         this.currentUserService = currentUserService;
         this.inventoryMapper = inventoryMapper;
         this.productInventoryMapper = productInventoryMapper;
         this.pricingService = pricingService;
+        this.percentOffStrategy = percentOffStrategy;
+        this.flatPriceStrategy = flatPriceStrategy;
         this.eventPublisher = eventPublisher;
     }
     
     @Transactional
     public InventoryResponse addToInventory(Long storeId, InventoryRequest request) {
-        Store store = storeRepository.findById(storeId)
-            .orElseThrow(() -> new IllegalArgumentException("Store not found with id: " + storeId));
+        Store store = findStoreByIdOrThrow(storeId);
         
-        Product product = productService.getProductEntity(request.productId());
+        Product product = findProductByIdOrThrow(request.productId());
         
         if (inventoryRepository.existsByProductProductIdAndStoreStoreId(request.productId(), storeId)) {
-            throw new IllegalArgumentException("Product already exists in this store's inventory");
+            throw new IllegalArgumentException(PRODUCT_ALREADY_IN_STORE);
         }
         
         Inventory inventory = new Inventory();
@@ -90,43 +103,38 @@ public class InventoryService {
     public List<ProductInventoryResponse> getInventoryByStore(Long storeId) {
         return inventoryRepository.findActiveInventoryByStoreIdWithProduct(storeId).stream()
             .map(this::toProductInventoryResponse)
-            .collect(Collectors.toList());
+            .toList();
     }
     
     @Transactional(readOnly = true)
     public ProductInventoryResponse getProductInventory(Long productId, Long storeId) {
-        Inventory inventory = inventoryRepository.findByProductProductIdAndStoreStoreIdAndIsActiveTrue(productId, storeId)
-            .orElseThrow(() -> new InventoryNotFoundException(
-                "Product " + productId + " not found in store " + storeId + " inventory"));
-        
-        return toProductInventoryResponse(inventory);
+        return toProductInventoryResponse(findActiveInventoryOrThrow(productId, storeId));
     }
     
     @Transactional
     // Soft archive only: marks the store inventory record inactive without deleting the product globally.
     public void archiveFromStore(Long productId, Long storeId) {
-        Inventory inventory = inventoryRepository.findByProductProductIdAndStoreStoreIdAndIsActiveTrue(productId, storeId)
-            .orElseThrow(() -> new InventoryNotFoundException(
-                "Product " + productId + " not found in store " + storeId + " inventory"));
-        
+        Inventory inventory = findActiveInventoryOrThrow(productId, storeId);
         inventory.setActive(false);
         inventoryRepository.save(inventory);
     }
     
     @Transactional
     public ProductInventoryResponse adjustQuantity(Long productId, Long storeId, Integer quantityChange, String notes) {
-        return adjustQuantity(productId, storeId, quantityChange, notes,
-            quantityChange > 0 ? TransactionType.RECEIVE : TransactionType.ADJUSTMENT);
+        validateNonZeroQuantityChange(quantityChange);
+        return adjustQuantity(productId, storeId, quantityChange, notes, TransactionType.ADJUSTMENT);
     }
 
     @Transactional
     public ProductInventoryResponse receiveStock(Long productId, Long storeId, Integer quantity, String notes) {
-        return adjustQuantity(productId, storeId, Math.abs(quantity), notes, TransactionType.RECEIVE);
+        validatePositiveQuantity(quantity);
+        return adjustQuantity(productId, storeId, quantity, notes, TransactionType.RECEIVE);
     }
 
     @Transactional
     public ProductInventoryResponse sellStock(Long productId, Long storeId, Integer quantity, String notes) {
-        return adjustQuantity(productId, storeId, -Math.abs(quantity), notes, TransactionType.SALE);
+        validatePositiveQuantity(quantity);
+        return adjustQuantity(productId, storeId, -quantity, notes, TransactionType.SALE);
     }
 
     private ProductInventoryResponse adjustQuantity(Long productId,
@@ -134,9 +142,7 @@ public class InventoryService {
                                                    Integer quantityChange,
                                                    String notes,
                                                    TransactionType transactionType) {
-        Inventory inventory = inventoryRepository.findByProductProductIdAndStoreStoreIdAndIsActiveTrue(productId, storeId)
-            .orElseThrow(() -> new InventoryNotFoundException(
-                "Product " + productId + " not found in store " + storeId + " inventory"));
+        Inventory inventory = findActiveInventoryOrThrow(productId, storeId);
         
         int newQuantity = inventory.getQuantityOnHand() + quantityChange;
         if (newQuantity < 0) {
@@ -161,32 +167,74 @@ public class InventoryService {
     }
 
     @Transactional
-    public ProductInventoryResponse markProductOnSale(Long productId,
-                                                      Long storeId,
-                                                      BigDecimal salesPriceModifier) {
-        Inventory inventory = inventoryRepository.findByProductProductIdAndStoreStoreIdAndIsActiveTrue(productId, storeId)
-            .orElseThrow(() -> new InventoryNotFoundException(
-                "Product " + productId + " not found in store " + storeId + " inventory"));
+    public ProductInventoryResponse markProductOnSaleByPercent(Long productId,
+                                                               Long storeId,
+                                                               BigDecimal percentOff) {
+        return applyModifier(productId, storeId, percentOff, percentOffStrategy);
+    }
 
-        BigDecimal percentOff = pricingService.normalizeSalesPriceModifier(salesPriceModifier);
+    @Transactional
+    public ProductInventoryResponse markProductOnSaleByFlat(Long productId,
+                                                            Long storeId,
+                                                            BigDecimal flatPrice) {
+        return applyModifier(productId, storeId, flatPrice, flatPriceStrategy);
+    }
+
+    private ProductInventoryResponse applyModifier(Long productId, Long storeId,
+                                                    BigDecimal inputValue,
+                                                    SalePricingStrategy strategy) {
+        Inventory inventory = findActiveInventoryOrThrow(productId, storeId);
+        BigDecimal modifier = pricingService.computeModifier(strategy, inventory.getProduct().getRetailPrice(), inputValue);
         inventory.setIsOnSale(true);
-        inventory.setSalesPriceModifier(percentOff);
-
-        Inventory saved = inventoryRepository.save(inventory);
-        return toProductInventoryResponse(saved);
+        inventory.setSalesPriceModifier(modifier);
+        return toProductInventoryResponse(inventoryRepository.save(inventory));
     }
 
     @Transactional
     public ProductInventoryResponse removeSale(Long productId, Long storeId) {
-        Inventory inventory = inventoryRepository.findByProductProductIdAndStoreStoreIdAndIsActiveTrue(productId, storeId)
-            .orElseThrow(() -> new InventoryNotFoundException(
-                "Product " + productId + " not found in store " + storeId + " inventory"));
+        Inventory inventory = findActiveInventoryOrThrow(productId, storeId);
 
         inventory.setIsOnSale(false);
         inventory.setSalesPriceModifier(null);
 
         Inventory saved = inventoryRepository.save(inventory);
         return toProductInventoryResponse(saved);
+    }
+
+    private Inventory findActiveInventoryOrThrow(Long productId, Long storeId) {
+        return inventoryRepository.findByProductProductIdAndStoreStoreIdAndIsActiveTrue(productId, storeId)
+            .orElseThrow(() -> new InventoryNotFoundException(
+                "Product " + productId + " not found in store " + storeId + " inventory"));
+    }
+
+    private Store findStoreByIdOrThrow(Long storeId) {
+        return storeRepository.findById(storeId)
+            .orElseThrow(() -> new StoreNotFoundException("Store not found with id: " + storeId));
+    }
+
+    private Product findProductByIdOrThrow(Long productId) {
+        return productRepository.findById(productId)
+            .orElseThrow(() -> new ProductNotFoundException("Product not found with id: " + productId));
+    }
+
+    private void validatePositiveQuantity(Integer quantity) {
+        requireNonNull(quantity, QTY_REQUIRED);
+        if (quantity <= 0) {
+            throw new IllegalArgumentException(POSITIVE_QTY_REQUIRED);
+        }
+    }
+
+    private void validateNonZeroQuantityChange(Integer quantityChange) {
+        requireNonNull(quantityChange, QTY_CHANGE_REQUIRED);
+        if (quantityChange == 0) {
+            throw new IllegalArgumentException(NON_ZERO_ADJUSTMENT_REQUIRED);
+        }
+    }
+
+    private void requireNonNull(Integer value, String message) {
+        if (value == null) {
+            throw new IllegalArgumentException(message);
+        }
     }
 
     private ProductInventoryResponse toProductInventoryResponse(Inventory inventory) {
